feat: all sections for desktop done

--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -141,16 +141,48 @@
                     <h2>Family</h2>
                     <div class="family__decsription">
                         <img src="./img/Steve-Jobs-family.jpg" alt="family-jobs" >
+
+                        <div class="family__text">
+                            <div class="family__subtitle">The late Apple founder was a father of four. <br>Get to know his kids: Lisa, Reed, Erin and Eve</p>
+                        </div>
+
+                        <div class="family__desc">
+                            <p>Powell is the wife of the Steve Jobs; they married in the early 1990’s. She was born on 6th November 1963 in New Jersey. Laurene Powell was a MBA graduate at Stanford business school. She earned B.Sc in Economics from the Wharton School and a B.A from the University of Pennsylvania. Powell is an American business executive and founder of the Emerson Collective. Powell controls and runs the Steven P Jobs Trust. The couple married on March 18, 1991, and lived in Palo Alto, California along with their three children.</p>
+                        </div>
                     </div>
                 
                 </div>
             </section>
             <section class="video">
-                <div class="container"></div>
+                <div class="container">
+                    <h2> Videos </h2>
+                    <div class="video__subtitle">
+                        the most famous videos from the life of Steve Jobs
+                    </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tuw8hxrFBH8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/MnrJzXM7a6o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                    <div class="video__trailer">
+                        <div class="video__film">
+                            History of Steve Jobs (Full Documentary)
+                        </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/s4pVFLUlx8g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+            <section class="quote">
+                <div class="container">
+                    <blockquote>
+                        <p> You have to trust in something - your gut, destiny, life, karma, whatever... </p>
+                    </blockquote>
+                </div>
             </section>
         </main>
         <footer>
-            <div class="container"></div>
+            <div class="container">
+                project by Ilona Skargovskaia <br> for <a href="https://developers.institute/en/">Developers institute</a>
+            </div>
         </footer>
     </div>
 </body>
