--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -27,6 +27,12 @@
                                 <li><a href="#video">Videos</a></li>
                             </ul>
                         </nav>
+                        <input class="checkbox" type="checkbox" name="" id="" />
+                        <div class="hamburger-lines">
+                            <span class="line line1"></span>
+                            <span class="line line2"></span>
+                            <span class="line line3"></span>
+                          </div> 
                         
                     </div>
                     <div class="header__description">
